<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    fontPath="fonts/OpenSans-Bold.ttf">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addcomment"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="40dp"
        android:textSize="20dp"
        android:layout_marginRight="40dp"
        fontPath="fonts/OpenSans-Bold.ttf"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="18dp"
        android:hint="@string/comment"
        fontPath="fonts/OpenSans-Bold.ttf"
        android:id="@+id/komentarz"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/anuluj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="6dp"
            android:layout_weight="2"
            android:background="@drawable/round_corner_orange"
            android:paddingBottom="11dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="10dp"
            fontPath="fonts/OpenSans-Bold.ttf"
            />

        <Button
            android:id="@+id/dodaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_orange"
            android:paddingBottom="11dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="10dp"
            android:text="@string/addcomment"
            android:textColor="@android:color/white"
            android:textSize="10dp"
            fontPath="fonts/OpenSans-Bold.ttf"
            />

    </LinearLayout>

</LinearLayout>